--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" />
-    <title>Dicee Game by 5hre9a</title>
+    <title>Dicee Game by Sanjana</title>
 
     <link rel="icon" href="images/dice6.png" />
 
@@ -15,10 +15,10 @@
 
   <body>
     <div class="container">
-      <h2>Dicee Game</h2>
+      <h2>Dice Game</h2>
       <hr />
 
-      <h1>Are you lucky ?</h1>
+      <h1>Play now!</h1>
 
       <div class="dice">
         <p class="names 1">Player 1</p>
@@ -34,7 +34,7 @@
     <button type="button" class="start" name="button">Roll the Dice</button>
 
     <footer>
-      A game by 5hre9a
+      A fun game by Sanjana
     </footer>
   </body>
 
